Formulario de Registro agregado

--- a/src/app/page/iniciar-sesion/iniciar-sesion.html
+++ b/src/app/page/iniciar-sesion/iniciar-sesion.html
@@ -48,7 +48,7 @@
                                         </div>
 
                                         <div class="d-flex justify-content-around align-items-center mb-4">
-                                            <a routerLink="/Registro_User">¿No tienes cuenta? ¡Regístrate!</a>
+                                            <a routerLink="/FormularioRegistro">¿No tienes cuenta? ¡Regístrate!</a>
                                         </div>
 
                                         <div class="text-center">
