--- a/src/app/page/gestion-usuarios/gestion-usuarios.html
+++ b/src/app/page/gestion-usuarios/gestion-usuarios.html
@@ -16,7 +16,7 @@
         </div>
 
         <div *ngIf="!loading && !error" class="overflow-x-auto">
-            <table class="table table-bordered table-hover">
+            <table id="usuariosTable" class="table table-bordered table-hover">
                 <thead>
                     <tr>
                         <th>Usuario</th>
