--- a/src/app/page/iniciar-sesion/iniciar-sesion.html
+++ b/src/app/page/iniciar-sesion/iniciar-sesion.html
@@ -17,21 +17,16 @@
 
                                 <!-- Formulario -->
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">INICIAR SESIÓN</p>
-
-                                    <!-- Loader -->
-                                    <div *ngIf="loading" class="text-center mb-3">
-                                        <div class="spinner-border text-primary" role="status">
-                                            <span class="visually-hidden">Cargando...</span>
-                                        </div>
-                                    </div>
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
+                                        INICIAR SESIÓN
+                                    </p>
 
                                     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="mx-1 mx-md-4">
 
                                         <!-- Email -->
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="bi bi-envelope fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
+                                            <div data-mdb-input-init class="form-outline flex-fill mb-0">
                                                 <input type="email" id="correo" class="form-control form-control-lg"
                                                     formControlName="correo" placeholder="Correo Electrónico"
                                                     required />
@@ -66,9 +61,10 @@
                                             <a routerLink="/FormularioRegistro">¿No tienes cuenta? ¡Regístrate!</a>
                                         </div>
 
+
                                         <!-- CAPTCHA -->
-                                        <div class="mb-4">
-                                            <div id="captcha-container"></div>
+                                        <div class="d-flex justify-content-center mb-4">
+                                            <div class="g-recaptcha" id="captcha-container"></div>
                                         </div>
 
                                         <!-- Botón de envío -->
@@ -96,9 +92,24 @@
                                             <i class="bi bi-google me-2"></i> Google
                                         </button>
                                     </div>
-                                </div>
 
-                                <!-- Fin del Formulario -->
+                                    <!-- Loader -->
+                                    <div *ngIf="loading" class="loader-container">
+                                        <div class="loader-text">
+                                            <span>S</span>
+                                            <span>e</span>
+                                            <span>n</span>
+                                            <span>s</span>
+                                            <span>u</span>
+                                            <span>T</span>
+                                            <span>r</span>
+                                            <span>a</span>
+                                            <span>c</span>
+                                            <span>k</span>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
