el navbar usuario esta completo

--- a/src/app/components/navbar-usuario/navbar-usuario.html
+++ b/src/app/components/navbar-usuario/navbar-usuario.html
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link fw-semibold text-dark" routerLink="/tracking">
+                <a class="nav-link fw-semibold text-dark" routerLink="/GPS">
                     <i class="bi bi-geo-alt-fill me-1"></i> Ubicación en Vivo
                 </a>
             </li>
