--- a/src/app/page/gps/gps.html
+++ b/src/app/page/gps/gps.html
@@ -1,6 +1,6 @@
 <app-navbar-usuario></app-navbar-usuario>
 <div class="mapa-section">
-    <h2 class="titulo-mapa">🌍 Ubicación del GPS</h2>
+    <h2 class="titulo-mapa">🌍 Ubicación del GPS 🌍</h2>
 
     <div class="acciones">
         <button (click)="toggleAgregarZona()" class="btn-zona">
