--- a/src/app/page/admin/admin.html
+++ b/src/app/page/admin/admin.html
@@ -72,9 +72,11 @@
 
             <app-registro-usu *ngSwitchCase="'registro_usuario'"></app-registro-usu>
             <app-reportes *ngSwitchCase="'reportes'"></app-reportes>
-            <!--
-            <app-registro-gps *ngSwitchCase="'registro_gps'"></app-registro-gps>
+
+            <!-- <app-registro-gps *ngSwitchCase="'registro_gps'"></app-registro-gps> -->
+
             <app-tabla-usuarios *ngSwitchCase="'tabla_usuarios'"></app-tabla-usuarios>
+            <!--
             <app-tabla-ciegos *ngSwitchCase="'tabla_discapacitados'"></app-tabla-ciegos>
             <app-registrar-roles *ngSwitchCase="'registro_roles'"></app-registrar-roles>
             <app-registro-modulos *ngSwitchCase="'registro_modulos'"></app-registro-modulos>
