--- a/src/app/page/admin/admin.html
+++ b/src/app/page/admin/admin.html
@@ -76,8 +76,9 @@
             <!-- <app-registro-gps *ngSwitchCase="'registro_gps'"></app-registro-gps> -->
 
             <app-tabla-usuarios *ngSwitchCase="'tabla_usuarios'"></app-tabla-usuarios>
+
+            <app-tabla-discapacitados *ngSwitchCase="'tabla_discapacitados'"></app-tabla-discapacitados>
             <!--
-            <app-tabla-ciegos *ngSwitchCase="'tabla_discapacitados'"></app-tabla-ciegos>
             <app-registrar-roles *ngSwitchCase="'registro_roles'"></app-registrar-roles>
             <app-registro-modulos *ngSwitchCase="'registro_modulos'"></app-registro-modulos>
             <app-modulo-rol *ngSwitchCase="'modulos_por_rol'"></app-modulo-rol>
