--- a/src/app/page/admin/admin.html
+++ b/src/app/page/admin/admin.html
@@ -36,22 +36,22 @@
                 <i class="bi bi-person-badge"></i>
                 <span *ngIf="expandido">Registrar Roles</span>
             </button>
-            <button (click)="mostrarRegistroModulos()">
+            <!-- <button (click)="mostrarRegistroModulos()">
                 <i class="bi bi-stack"></i>
                 <span *ngIf="expandido">Registrar Módulos</span>
             </button>
             <button (click)="mostrarRegistroModuloxRol()">
                 <i class="bi bi-shield-lock"></i>
                 <span *ngIf="expandido">Asignar Módulo</span>
-            </button>
+            </button> -->
             <button (click)="mostrarTableroPowerBI()">
                 <i class="bi bi-graph-up"></i>
                 <span *ngIf="expandido">Tablero</span>
             </button>
-            <button (click)="mostrarHistorialUbicaciones()">
+            <!-- <button (click)="mostrarHistorialUbicaciones()">
                 <i class="bi bi-map"></i>
                 <span *ngIf="expandido">Ubicaciones</span>
-            </button>
+            </button> -->
             <button (click)="logout()" class="logout">
                 <i class="bi bi-power"></i>
                 <span *ngIf="expandido">Cerrar Sesión</span>
