funciona el registro de discapacitados

--- a/src/app/page/admin/admin.html
+++ b/src/app/page/admin/admin.html
@@ -72,11 +72,8 @@
 
             <app-registro-usu *ngSwitchCase="'registro_usuario'"></app-registro-usu>
             <app-reportes *ngSwitchCase="'reportes'"></app-reportes>
-
-            <!-- <app-registro-gps *ngSwitchCase="'registro_gps'"></app-registro-gps> -->
-
+            <app-registro-discapacitado *ngSwitchCase="'registro_gps'"></app-registro-discapacitado>
             <app-tabla-usuarios *ngSwitchCase="'tabla_usuarios'"></app-tabla-usuarios>
-
             <app-tabla-discapacitados *ngSwitchCase="'tabla_discapacitados'"></app-tabla-discapacitados>
             <!--
             <app-registrar-roles *ngSwitchCase="'registro_roles'"></app-registrar-roles>
