--- a/src/app/page/registro-discapacitados/registro-discapacitados.css
+++ b/src/app/page/registro-discapacitados/registro-discapacitados.css
@@ -117,3 +117,21 @@
         opacity: 1;
     }
 }
+
+.video-container {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    overflow: hidden;
+    border-radius: 12px;
+}
+
+.overlay-marco {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 10;
+}
