--- a/src/app/page/usuario/usuario.html
+++ b/src/app/page/usuario/usuario.html
@@ -1,11 +1,11 @@
 <app-navbar-usuario></app-navbar-usuario>
 <app-carrousel></app-carrousel>
-
+<app-chatbot></app-chatbot>
 <div class="container my-5" style="padding-top: 5%;">
     <div class="row g-4">
 
         <!-- Carta del Usuario -->
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
             <div class="card shadow-sm border-0 rounded-4 h-100">
                 <div class="card-header bg-primary text-white rounded-top-4">
                     <h5 class="mb-0">📋 Datos del Usuario</h5>
@@ -28,7 +28,7 @@
         </div>
 
         <!-- Carta del Discapacitado Visual -->
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
             <div class="card shadow-sm border-0 rounded-4 h-100">
                 <div class="card-header bg-success text-white rounded-top-4">
                     <h5 class="mb-0">🧑‍🦯 Persona con Discapacidad Visual</h5>
@@ -44,7 +44,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </div>
